--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header & Navigation -->
     <header>
         <a href="#" class="logo">My<span>Portfolio</span></a>
         <nav>
@@ -28,7 +27,6 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
             <h1 class="fade-in">Hi, I'm <span>Your Name</span></h1>
@@ -41,14 +39,12 @@
         </div>
     </section>
 
-    <!-- Skills Section -->
     <section class="skills" id="skills">
         <div class="section-title fade-in">
             <h2>My Skills</h2>
             <p>Technologies and tools I'm proficient with</p>
         </div>
         <div class="skills-container">
-            <!-- Skill Item 1 -->
             <div class="skill-card fade-in">
                 <div class="skill-icon">
                     <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -59,7 +55,6 @@
                 <h3>Web Design</h3>
                 <p>Beautiful, intuitive interfaces</p>
             </div>
-            <!-- Skill Item 2 -->
             <div class="skill-card fade-in delay-1">
                 <div class="skill-icon">
                     <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -77,7 +72,6 @@
                 <h3>Frontend</h3>
                 <p>HTML, CSS, JavaScript</p>
             </div>
-            <!-- Skill Item 3 -->
             <div class="skill-card fade-in delay-2">
                 <div class="skill-icon">
                     <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -88,7 +82,6 @@
                 <h3>UI/UX</h3>
                 <p>User-centered design</p>
             </div>
-            <!-- Skill Item 4 -->
             <div class="skill-card fade-in">
                 <div class="skill-icon">
                     <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -100,7 +93,6 @@
                 <h3>Responsive</h3>
                 <p>Mobile-first approach</p>
             </div>
-            <!-- Skill Item 5 -->
             <div class="skill-card fade-in delay-1">
                 <div class="skill-icon">
                     <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -112,7 +104,6 @@
                 <h3>Development</h3>
                 <p>Clean, efficient code</p>
             </div>
-            <!-- Skill Item 6 -->
             <div class="skill-card fade-in delay-2">
                 <div class="skill-icon">
                     <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -126,7 +117,6 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
     <section class="experience" id="experience">
         <div class="section-title fade-in">
             <h2>Experience</h2>
@@ -134,26 +124,34 @@
         </div>
         <div class="experience-container">
             <div class="experience-item fade-in">
-                <h3>Frontend Developer</h3>
-                <p><strong>Company A</strong> | 2022 - Present</p>
-                <p>Developed modern web applications and collaborated with UI/UX teams.</p>
+                <div class="experience-image">
+                    <img src="https://via.placeholder.com/150" alt="Foto Pengalaman Kerja di Company A">
+                </div>
+                <div class="experience-content">
+                    <h3>Frontend Developer</h3>
+                    <p><strong>Company A</strong> | 2022 - Present</p>
+                    <p>Developed modern web applications and collaborated with UI/UX teams.</p>
+                </div>
             </div>
             <div class="experience-item fade-in delay-1">
-                <h3>Web Designer</h3>
-                <p><strong>Company B</strong> | 2020 - 2022</p>
-                <p>Designed responsive websites and improved user experience for clients.</p>
+                <div class="experience-image">
+                    <img src="https://via.placeholder.com/150" alt="Foto Pengalaman Kerja di Company B">
+                </div>
+                <div class="experience-content">
+                    <h3>Web Designer</h3>
+                    <p><strong>Company B</strong> | 2020 - 2022</p>
+                    <p>Designed responsive websites and improved user experience for clients.</p>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Projects Section -->
     <section class="projects" id="projects">
         <div class="section-title fade-in">
             <h2>Featured Projects</h2>
             <p>Some of my recent work</p>
         </div>
         <div class="projects-container">
-            <!-- Project 1 -->
             <div class="project-card fade-in">
                 <div class="project-image">
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/fee7a5f4-2911-4fc1-b766-bf0cf9111ef6.png" alt="Dashboard interface with analytics charts and data visualization" />
@@ -167,7 +165,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Project 2 -->
             <div class="project-card fade-in delay-1">
                 <div class="project-image">
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/ba646e2a-c881-4d1c-a3ae-f2b999971784.png" alt="E-commerce product page displaying several fashion items in a grid layout" />
@@ -181,7 +178,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Project 3 -->
             <div class="project-card fade-in delay-2">
                 <div class="project-image">
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/83c5c266-b0fe-4e7f-a5bf-5a26844fef57.png" alt="Mobile app interface with weather forecast and temperature display" />
@@ -198,7 +194,6 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section class="contact" id="contact">
         <div class="section-title fade-in">
             <h2>Get In Touch</h2>
@@ -238,14 +233,12 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="fade-in delay-2">
         <p>© <span id="year"></span> Your Name. All rights reserved.</p>
         <p>Built with ❤️ in Jakarta</p>
         <p><a href="#home">Back to Top</a></p>
     </footer>
 
-    <!-- Back to Top Button -->
     <a href="#" class="back-to-top fade-in">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <polyline points="18 15 12 9 6 15"></polyline>
