--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio | Simply Modern</title>
+    <title>Portofolio Atha | 2025</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <a href="#" class="logo">My<span>Portfolio</span></a>
+        <a href="#" class="logo"><span></span></a>
         <nav>
             <ul id="nav-menu">
                 <li><a href="#home">Home</a></li>
@@ -29,9 +29,9 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1 class="fade-in">Hi, I'm <span>Your Name</span></h1>
-            <h2 class="fade-in delay-1">A Creative Developer</h2>
-            <p class="fade-in delay-2">I build exceptional digital experiences with clean, efficient code and thoughtful design.</p>
+            <h1 class="fade-in">Hi, I'm <span>Naufal Athalino Bakti</span></h1>
+            <h2 class="fade-in delay-1">Tech Enthusiast</h2>
+            <p class="fade-in delay-2">Passionate tech enthusiast with skills in HTML, JavaScript, Java, Python, and SAP. I work as a Business Process Analyst and System Analyst, building user-friendly web apps, efficient software, and smart enterprise solutions. Always learning, always solving I use technology to create real impact.</p>
             <a href="#projects" class="btn fade-in delay-3">View My Work</a>
         </div>
         <div class="hero-image fade-in delay-1">
