--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
             <a href="#projects" class="inline-block bg-indigo-600 text-white py-3 px-6 rounded-full no-underline font-medium transition-all duration-300 border-2 border-indigo-600 hover:bg-transparent hover:text-indigo-600 fade-in delay-3">View My Work</a>
         </div>
         <div class="w-full md:w-2/5 flex justify-center mt-8 md:mt-0 fade-in delay-1">
-            <img src="https://drive.google.com/uc?export=view&id=1K5IKgvZxHVkZ7yPvHYBkfB3jNy6699R5
-" alt="Professional headshot of a developer with a modern office background" class="w-72 h-72 md:w-80 md:h-80 rounded-full object-cover border-4 border-gray-200 shadow-xl" />
+            <div class="relative flex items-center justify-center" style="width: 20rem; height: 20rem;">
+                <div class="absolute inset-0 rounded-full border-4 border-gray-200 shadow-xl"></div>
+                <img src="images/personal_photo.jpg" alt="Smiling developer wearing business casual attire sits in front of a modern office background with soft natural lighting creating a welcoming and professional atmosphere"
+                    class="rounded-full w-full h-full object-cover object-center border-4 border-white shadow-xl" style="aspect-ratio: 1 / 1;" />
+            </div>
         </div>
     </section>
 
@@ -160,13 +163,13 @@
         </div>
         <div class="grid grid-cols-1 gap-8 max-w-3xl mx-auto">
             <div class="flex flex-col md:flex-row items-center gap-6 bg-gray-100 rounded-lg p-8 shadow-md fade-in">
-                <div class="flex-shrink-0">
-                    <img src="https://via.placeholder.com/150" alt="Foto Pengalaman Kerja di SAG Laboratory" class="w-36 h-36 object-cover rounded-lg">
+                <div class="flex-shrink-0 w-80 h-56 flex items-center justify-center">
+                    <img src="images/PSI.jpg" alt="Foto Pengalaman Kerja di SAG Laboratory" class="object-contain rounded-lg w-full h-full" style="max-width: 20rem; max-height: 14rem;">
                 </div>
                 <div class="flex-grow text-center md:text-left">
                     <h3 class="text-xl font-semibold mb-2 text-gray-900">PSI Practicum Assistant</h3>
                     <p class="text-gray-700 font-bold mb-1"><strong>SAG Laboratory</strong> | Juni 2024 - Desember 2024</p>
-                    <ul class="text-gray-600 text-justify list-disc list-inside space-y-2"></ul>
+                    <ul class="text-gray-600 text-justify list-disc list-inside space-y-2">
                         <li>Taught over 400+ students per semester in hands-on sessions using Microsoft Word, Excel, and Canva</li>
                         <li>Helped increase average student grades by 15–20% through interactive and practical guidance</li>
                         <li>Conducted 30+ practicum sessions focusing on real-world document creation, data analysis, and visual design</li>
@@ -177,8 +180,8 @@
                 </div>
             </div>
             <div class="flex flex-col md:flex-row items-center gap-6 bg-gray-100 rounded-lg p-8 shadow-md fade-in delay-1">
-                <div class="flex-shrink-0">
-                    <img src="https://via.placeholder.com/150" alt="Foto Pengalaman Kerja di DASPRO Laboratory" class="w-36 h-36 object-cover rounded-lg">
+                <div class="flex-shrink-0 w-80 h-56 flex items-center justify-center">
+                    <img src="images/DASPRO.png" alt="Foto Pengalaman Kerja di DASPRO Laboratory" class="object-contain rounded-lg w-full h-full" style="max-width: 20rem; max-height: 14rem;">
                 </div>
                 <div class="flex-grow text-center md:text-left">
                     <h3 class="text-xl font-semibold mb-2 text-gray-900">Database System Practicum Assistant</h3>
