--- a/index.html
+++ b/index.html
@@ -379,20 +379,16 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
             <div class="mb-8 fade-in">
                 <h3 class="text-2xl font-semibold mb-4 text-gray-900">Contact Information</h3>
-                <p class="text-gray-600 mb-2"><strong>Email:</strong> hello@example.com</p>
-                <p class="text-gray-600 mb-2"><strong>Phone:</strong> +1 (234) 567-890</p>
+                <p class="text-gray-600 mb-2"><strong>Email:</strong> athalino71@gmail.com</p>
                 <p class="text-gray-600 mb-2"><strong>Location:</strong> Jakarta, Indonesia</p>
                 <div class="flex mt-6">
-                    <a href="#" aria-label="LinkedIn" class="flex items-center justify-center w-10 h-10 rounded-full bg-indigo-600 text-white mr-4 no-underline transition-all duration-300 hover:bg-gray-900 hover:translate-y-[-5px]">
+                    <a href="https://www.linkedin.com/in/naufalathalinobakti/" target="_blank"LinkedIn" class="flex items-center justify-center w-10 h-10 rounded-full bg-indigo-600 text-white mr-4 no-underline transition-all duration-300 hover:bg-gray-900 hover:translate-y-[-5px]">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
                     </a>
-                    <a href="#" aria-label="GitHub" class="flex items-center justify-center w-10 h-10 rounded-full bg-indigo-600 text-white mr-4 no-underline transition-all duration-300 hover:bg-gray-900 hover:translate-y-[-5px]">
+                    <a href="https://github.com/athalino-bakti" aria-label="GitHub" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full bg-indigo-600 text-white mr-4 no-underline transition-all duration-300 hover:bg-gray-900 hover:translate-y-[-5px]">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
                     </a>
-                    <a href="#" aria-label="Twitter" class="flex items-center justify-center w-10 h-10 rounded-full bg-indigo-600 text-white mr-4 no-underline transition-all duration-300 hover:bg-gray-900 hover:translate-y-[-5px]">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
-                    </a>
-                    <a href="#" aria-label="Instagram" class="flex items-center justify-center w-10 h-10 rounded-full bg-indigo-600 text-white no-underline transition-all duration-300 hover:bg-gray-900 hover:translate-y-[-5px]">
+                    <a href="https://www.instagram.com/athalino/" target="_blank" aria-label="Instagram" class="flex items-center justify-center w-10 h-10 rounded-full bg-indigo-600 text-white no-underline transition-all duration-300 hover:bg-gray-900 hover:translate-y-[-5px]">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
                     </a>
                 </div>
