--- a/index.html
+++ b/index.html
@@ -131,12 +131,20 @@
                         <span class="text-xs text-secondary">JavaScript</span>
                    </div>
                    <div class="flex flex-col items-center p-3 rounded-lg bg-white/5 hover:bg-white/10 transition-colors">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" class="w-8 h-8 mb-2" title="PHP">
+                        <img src="https://www.php.net/images/logos/new-php-logo.svg" class="w-8 h-8 mb-2" title="PHP">
                         <span class="text-xs text-secondary">PHP</span>
                    </div>
                    <div class="flex flex-col items-center p-3 rounded-lg bg-white/5 hover:bg-white/10 transition-colors">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" class="w-8 h-8 mb-2" title="Python">
+                        <span class="text-xs text-secondary">Python</span>
+                   </div>
+                   <div class="flex flex-col items-center p-3 rounded-lg bg-white/5 hover:bg-white/10 transition-colors">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" class="w-8 h-8 mb-2" title="MySQL">
-                        <span class="text-xs text-secondary">MySQL</span>
+                         <span class="text-xs text-secondary">MySQL</span>
+                   </div>
+                   <div class="flex flex-col items-center p-3 rounded-lg bg-white/5 hover:bg-white/10 transition-colors">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" class="w-8 h-8 mb-2" title="Java">
+                        <span class="text-xs text-secondary">Java</span>
                    </div>
                    <div class="flex flex-col items-center p-3 rounded-lg bg-white/5 hover:bg-white/10 transition-colors">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" class="w-8 h-8 mb-2" title="PostgreSQL">
@@ -151,6 +159,9 @@
                              <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">RESTful API</span>
                              <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">GraphQL</span>
                              <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">JWT Authentication</span>
+                             <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">Data Cleaning</span>
+                             <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">Statistics</span>
+
                         </div>
                     </div>
                     <div>
@@ -164,6 +175,8 @@
                             <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">SDLC</span>
                             <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">IT Audit</span>
                             <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">Software Testing</span>
+                            <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">Critical Thinking</span>
+                            <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">Communication</span>
                         </div>
                     </div>
                 </div>
@@ -197,6 +210,18 @@
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" class="w-8 h-8 mb-2" title="Docker">
                         <span class="text-xs text-secondary">Docker</span>
                     </div>
+                    <div class="flex flex-col items-center p-3 rounded-lg bg-white/5 hover:bg-white/10 transition-colors">
+                        <img src="https://cdn.worldvectorlogo.com/logos/tableau-software.svg" class="w-8 h-8 mb-2" title="Tableau">
+                        <span class="text-xs text-secondary">Tableau</span>
+                    </div>
+                    <div class="flex flex-col items-center p-3 rounded-lg bg-white/5 hover:bg-white/10 transition-colors">
+                         <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/New_Power_BI_Logo.svg" class="w-8 h-8 mb-2" title="Power BI">
+                        <span class="text-xs text-secondary">Power BI</span>
+                    </div>
+                    <div class="flex flex-col items-center p-3 rounded-lg bg-white/5 hover:bg-white/10 transition-colors">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/1/17/Google_Looker_Studio_logo.svg" class="w-8 h-8 mb-2" title="Looker Studio">
+                        <span class="text-xs text-secondary">Looker Studio</span>
+                    </div>
                 </div>
 
                 <div class="space-y-4">
@@ -219,6 +244,9 @@
                             <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">Visual Paradigm</span>
                             <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">SAP</span>
                             <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">BPMN Tools</span>
+                            <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">Tableau</span>
+                            <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">Power BI</span>
+                            <span class="px-3 py-1 bg-white/5 border border-white/10 rounded-full text-xs text-secondary">Looker Studio</span>
                         </div>
                     </div>
                 </div>
