--- a/index.html
+++ b/index.html
@@ -584,6 +584,50 @@
                     <p class="text-secondary text-sm line-clamp-2">Video streaming service with adaptive bitrate playback and personalized recommendation engine.</p>
                 </div>
             </div>
+            <!-- 6. EdVantage E-Learning -->
+            <div class="card-linear rounded-2xl overflow-hidden group project-item" data-aos="fade-up" data-aos-delay="100" data-skill="Web Application" data-tilt data-tilt-max="5" data-tilt-scale="1.02">
+                <div class="h-48 overflow-hidden relative">
+                     <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors z-10"></div>
+                     <img src="images/project_edvantage_elearning_1769689661189.png" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105" alt="EdVantage E-Learning">
+                </div>
+                <div class="p-6">
+                    <h3 class="text-lg font-semibold text-white mb-2 group-hover:text-primary transition-colors">EdVantage E-Learning</h3>
+                    <p class="text-secondary text-sm line-clamp-2">Interactive online learning platform featuring video courses, progress tracking, and gamified quizzes.</p>
+                </div>
+            </div>
+            <!-- 7. VitalSync Telemedicine -->
+            <div class="card-linear rounded-2xl overflow-hidden group project-item" data-aos="fade-up" data-aos-delay="100" data-skill="Web Application" data-tilt data-tilt-max="5" data-tilt-scale="1.02">
+                <div class="h-48 overflow-hidden relative">
+                     <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors z-10"></div>
+                     <img src="images/project_vitalsync_telemedicine_1769689678630.png" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105" alt="VitalSync Telemedicine">
+                </div>
+                <div class="p-6">
+                    <h3 class="text-lg font-semibold text-white mb-2 group-hover:text-primary transition-colors">VitalSync Telemedicine</h3>
+                    <p class="text-secondary text-sm line-clamp-2">Secure digital health platform connecting patients with doctors for virtual consultations and vital monitoring.</p>
+                </div>
+            </div>
+            <!-- 8. EcoMarketplace -->
+            <div class="card-linear rounded-2xl overflow-hidden group project-item" data-aos="fade-up" data-aos-delay="100" data-skill="Web Application" data-tilt data-tilt-max="5" data-tilt-scale="1.02">
+                <div class="h-48 overflow-hidden relative">
+                     <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors z-10"></div>
+                     <img src="images/project_ecomarketplace_sustainable_1769689699992.png" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105" alt="EcoMarketplace">
+                </div>
+                <div class="p-6">
+                    <h3 class="text-lg font-semibold text-white mb-2 group-hover:text-primary transition-colors">EcoMarketplace</h3>
+                    <p class="text-secondary text-sm line-clamp-2">Sustainable e-commerce solution highlighting eco-friendly products with built-in carbon footprint calculation.</p>
+                </div>
+            </div>
+            <!-- 9. FinSight Dashboard -->
+            <div class="card-linear rounded-2xl overflow-hidden group project-item" data-aos="fade-up" data-aos-delay="100" data-skill="Web Application" data-tilt data-tilt-max="5" data-tilt-scale="1.02">
+                <div class="h-48 overflow-hidden relative">
+                     <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors z-10"></div>
+                     <img src="images/project_finsight_dashboard_1769689737372.png" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105" alt="FinSight Dashboard">
+                </div>
+                <div class="p-6">
+                    <h3 class="text-lg font-semibold text-white mb-2 group-hover:text-primary transition-colors">FinSight Dashboard</h3>
+                    <p class="text-secondary text-sm line-clamp-2">Comprehensive financial analytics dashboard offering real-time insights into spending, savings, and investment portfolios.</p>
+                </div>
+            </div>
 
             <!-- UI UX PROJECTS -->
             <!-- 1. FinFlow (Existing) -->
